Source/WebCore/style/StyleAdjuster.cpp
@@ -54,6 +54,7 @@
 #include "RenderTheme.h"
 #include "RuntimeEnabledFeatures.h"
 #include "SVGElement.h"
+#include "SVGGraphicsElement.h"
 #include "SVGNames.h"
 #include "SVGURIReference.h"
 #include "Settings.h"
@@ -364,13 +365,21 @@ void Adjuster::adjust(RenderStyle& style, const RenderStyle* userAgentAppearance
     else
         style.setUsedZIndex(style.specifiedZIndex());
 
+    // For SVG compatibility purposes we have to consider the 'animatedLocalTransform' besides the RenderStyle to query
+    // if an element has a transform. SVG transforms are not stored on the RenderStyle, and thus we need a special case here.
+    bool hasTransformRelatedProperty = style.hasTransformRelatedProperty();
+#if ENABLE(LAYER_BASED_SVG_ENGINE)
+    if (!hasTransformRelatedProperty && is<SVGGraphicsElement>(m_element) && m_element->document().settings().layerBasedSVGEngineEnabled())
+        hasTransformRelatedProperty = !downcast<SVGGraphicsElement>(*m_element).animatedLocalTransform().isIdentity();
+#endif
+
     // Auto z-index becomes 0 for the root element and transparent objects. This prevents
     // cases where objects that should be blended as a single unit end up with a non-transparent
     // object wedged in between them. Auto z-index also becomes 0 for objects that specify transforms/masks/reflections.
     if (style.hasAutoUsedZIndex()) {
         if ((m_element && m_document.documentElement() == m_element)
             || style.hasOpacity()
-            || style.hasTransformRelatedProperty()
+            || hasTransformRelatedProperty
             || style.hasMask()
             || style.clipPath()
             || style.boxReflect()
